# ohshit

./: .gitignore  Makefile  README.md  pyproject.toml
src/ohshit/: __init__.py  db.py  discovery.py  distro_eol.py  iot.py  main.py  models.py  oui_db.py  port_probe.py  report.py  risk_engine.py  sbom.py  ssh_collector.py  vuln_db.py
src/ohshit/tui/: app.py  app.tcss  widgets.py
